# bonderizer-py

./: README.md  pyproject.toml  requirements.txt
src/bonderizer/: bonderizer.py  cli.py  examples.py  util.py
templates/bonderizer/: README.md  cookiecutter.json
templates/bonderizer/src/{{cookiecutter.project_slug}}/: contract.py
tests/: test_bonderizer.py
