[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonderizer"
version = "0.0.1"
authors = [
  { name="Christopher Zorn", email="christopher.zorn@gmail.com" },
]
description = "Create a distributed service with only the code that matters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/twonds/bonderizer-py"
"Bug Tracker" = "https://github.com/twonds/bonerizer-py/issues"