[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonderizer"
version = "0.0.1"
authors = [
  { name="Christopher Zorn", email="christopher.zorn@gmail.com" },
]
description = "Create a distributed service with only the code that matters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "arrow==1.2.3",
    "cookiecutter==2.1.1",
    "fire==0.5.0",
    "rich==13.3.1"
]

[project.optional-dependencies]
test = [
    "black==23.1.0",
    "hypothesis==6.68.2",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
]

deploy = []



[project.urls]
"Homepage" = "https://github.com/twonds/bonderizer-py"
"Bug Tracker" = "https://github.com/twonds/bonerizer-py/issues"


[project.scripts]
bonderizer = "bonderizer.bonderizer:cli"
